[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ehe_utility"
version = "0.6.0"
authors = [
  { name="Hunter Eidson", email="eeidson@gmail.com" },
]
description = "A small utility package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/eeidson/ehe_utility_module"
"Bug Tracker" = "https://github.com/eeidson/ehe_utility_module/issues"
